theme/styles/parts/header.less
.main-header {
	&__row {
		display: flex;
		align-items: flex-end;
	}


	@media @media-m-max {
		position: fixed;
		top: 0;
		left: 0;
		z-index: 50;
		width: 100vw;
		background: @second;
		margin: 0;
		box-shadow: 0 0 10px fade(@first, 50%)
	}


	@media @media-m-min {
		&__hamburger {
			display: none;
		}
	}
}

